--- a/data-raw/paper/appendix.tex
+++ b/data-raw/paper/appendix.tex
@@ -24,6 +24,7 @@ Mathematical notations used in this note:
                   = \left(I_m \otimes \mathbf{A}\right)\vec \mathbf{B}
                   = \left(\mathbf{B}^\top \otimes I_k \right) \vec \mathbf{A}$: for $\mathbf{A}: k\times l$ and $\mathbf{B}:l\times m$
       \item $\mathcal{K}^{(m,n)}$: Commutation matrix such that $\mathcal{K}^{(m,n)}\vec \mathbf{A} = \vec \left(\mathbf{A}^\top\right)$ for a matrix $\mathbf{A} \in \mathbb{R}^{m \times n}$
+      \item Matrix calculus notations used throughout this note are based on \citet{magnus2019}
 \end{itemize}
 
 % \section{lsjdfl}
