--- a/data-raw/paper/main.tex
+++ b/data-raw/paper/main.tex
@@ -219,9 +219,9 @@
 
 TODO: {
 \color{red}
-\begin{enumerate}
-  \item edit all ``Sinkhorn''
-\end{enumerate}
+% \begin{enumerate}
+%   \item edit all ``Sinkhorn''
+% \end{enumerate}
 }
 
 
@@ -262,9 +262,9 @@ TODO: {
 \sectionmark{Barycenter}
 \input{sec5_barycenter.tex}
 
-\section{Wasserstein Barycenter with Gradients}\label{sec:barycenter-gradient}
-\sectionmark{Barycenter Gradient}
-\input{sec6_barycenter_gradient.tex}
+\section{Wasserstein Barycenter with Jacobians}\label{sec:barycenter-jacobian}
+\sectionmark{Barycenter Jacobian}
+\input{sec6_barycenter_jacobian.tex}
 
 \section{Wasserstein Dictionary Learning}\label{sec:wdl}
 \sectionmark{WDL}
